objects/Case/fields/Call_Back_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Time_Slot__c</fullName>
    <label>Call Back Time Slot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00:00 - 01:00</fullName>
            </value>
            <value>
                <fullName>01:00 - 02:00</fullName>
            </value>
            <value>
                <fullName>02:00 - 03:00</fullName>
            </value>
            <value>
                <fullName>03:00 - 04:00</fullName>
            </value>
            <value>
                <fullName>04:00 - 05:00</fullName>
            </value>
            <value>
                <fullName>05:00 - 06:00</fullName>
            </value>
            <value>
                <fullName>06:00 - 07:00</fullName>
            </value>
            <value>
                <fullName>07:00 - 08:00</fullName>
            </value>
            <value>
                <fullName>08:00 - 09:00</fullName>
            </value>
            <value>
                <fullName>09:00 - 10:00</fullName>
            </value>
            <value>
                <fullName>10:00 - 11:00</fullName>
            </value>
            <value>
                <fullName>11:00 - 12:00</fullName>
            </value>
            <value>
                <fullName>12:00 - 13:00</fullName>
            </value>
            <value>
                <fullName>13:00 - 14:00</fullName>
            </value>
            <value>
                <fullName>14:00 - 15:00</fullName>
            </value>
            <value>
                <fullName>15:00 - 16:00</fullName>
            </value>
            <value>
                <fullName>16:00 - 17:00</fullName>
            </value>
            <value>
                <fullName>17:00 - 18:00</fullName>
            </value>
            <value>
                <fullName>18:00 - 19:00</fullName>
            </value>
            <value>
                <fullName>19:00 - 20:00</fullName>
            </value>
            <value>
                <fullName>20:00 - 21:00</fullName>
            </value>
            <value>
                <fullName>21:00 - 22:00</fullName>
            </value>
            <value>
                <fullName>22:00 - 23:00</fullName>
            </value>
            <value>
                <fullName>23:00 - 00:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>