objects/Case/fields/Case_Handling_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Handling_Time__c</fullName>
    <formula>ClosedDate - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Handling Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>