objects/Case/fields/Change_From__c.field-meta.xml
<CustomField>
    <fullName>Change_From__c</fullName>
    <label>Change From</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>