objects/Case/fields/Change_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Change_Instruction__c</fullName>
    <label>Change Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>