objects/Case/fields/Change_Object__c.field-meta.xml
<CustomField>
    <fullName>Change_Object__c</fullName>
    <label>Change Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>ContactMethod</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>