objects/Case/fields/Change_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Change_Object_ID__c</fullName>
    <label>Change Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>