objects/Case/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <formula>TEXT(Account.Customer_Tier__c)</formula>
    <label>Customer Tier</label>
    <type>Text</type>
</CustomField>