objects/Case/fields/First_Contact_Resolution__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Resolution__c</fullName>
    <formula>(Case_Handling_Time__c) &lt; 1</formula>
    <label>First Contact Resolution</label>
    <type>Checkbox</type>
</CustomField>