objects/Case/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <formula>TEXT(Policy__r.Policy_Type__c)</formula>
    <label>Policy Type</label>
    <type>Text</type>
</CustomField>