objects/Case/fields/Requester_Role__c.field-meta.xml
<CustomField>
    <fullName>Requester_Role__c</fullName>
    <label>Requester Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>Policyholder</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>