objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Claims Procedure / Status</fullName>
            </value>
            <value>
                <fullName>Payment Procedure / Status</fullName>
            </value>
            <value>
                <fullName>Policy Details</fullName>
            </value>
            <value>
                <fullName>Send Form / Report</fullName>
            </value>
            <value>
                <fullName>Policy Cancellation</fullName>
            </value>
            <value>
                <fullName>Agent Service</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>