objects/Case/recordTypes/Follow_Up_Phone_Call.recordType-meta.xml
<RecordType>
    <fullName>Follow_Up_Phone_Call</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Follow Up Phone Call</label>
</RecordType>