objects/Case/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>General</label>
</RecordType>