objects/Case/recordTypes/Social_Chat.recordType-meta.xml
<RecordType>
    <fullName>Social_Chat</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Social Chat</label>
</RecordType>