objects/Case/recordTypes/Social_Post.recordType-meta.xml
<RecordType>
    <fullName>Social_Post</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>Social Post</label>
</RecordType>