objects/Case/recordTypes/SOS.recordType-meta.xml
<RecordType>
    <fullName>SOS</fullName>
    <active>true</active>
    <businessProcess>Gold Standard Support Process</businessProcess>
    <label>SOS</label>
</RecordType>